Some basic CSS.

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
 body {
-	background-color: tomato;
+	background-color: lightgray;
+	font-weight: normal;
+	font-style: normal;
+	font-size: 1.5rem;
+	font-family: 
 }
